# ragulate

./: .gitignore  Makefile  README.md  alt_config.yaml  colbert_chunk_size_and_k.py  colbert_compare.yaml  colbert_query.py  config.yaml  example_config.yaml  experiment_chunk_size_and_k.py  open_ai_chunk_size_and_k.py  open_ai_query.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/vector_stores/: .env.template  colbert.py  config.yaml  openai.py
ragulate/: analysis.py  analysis_engine.py  cli.py  datasets.py  framework.py  ingest.py  logging_config.py  metrics.py  pipelines.py  query_pipeline.py  recipe.py  signal_handler.py  utils.py
ragulate/cli_commands/: __init__.py  compare.py  download.py  ingest.py  query.py  run.py
ragulate/config/: __init__.py  base_config_schema.py  config_parser.py  config_schema_0_1.py  objects.py  utils.py
ragulate/datasets/: __init__.py  base_dataset.py  crag_dataset.py  llama_dataset.py  utils.py
ragulate/pipelines/: base_pipeline.py  feedbacks.py  ingest_pipeline.py  query_pipeline.py
scripts/: get_project_info.py  test_integration_runner.py  test_unit_runner.py
tests/unit_tests/: test_config_validation.py
