[tool.poetry]
name = "ragulate"
version = "0.0.1"
description = "A tool for evaluating RAG pipelines"
authors = ["Eric Pinzur <epinzur@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
trulens-eval = "0.30.1"
llama-index-core = "^0.10.39.post1"
python-dotenv = "^1.0.1"
plotly = "^5.22.0"
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
langchain-core = "^0.2.1"
langchain-community = "0.2.1"
langchain-openai= "0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ragulate = "ragulate.cli:main"